// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toolbar Personal Tools component > renders an Toolbar Personal Tools component - in a non-root path 1`] = `
<div
  className="personal-tools pastanaga-menu"
  style={
    {
      "flex": "0 0 320px",
    }
  }
>
  <header
    className="header"
  >
    <button
      className="back"
      onClick={[Function]}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Back</title>undefined",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
      />
    </button>
    <div
      className="vertical divider"
    />
    <h2>
      admin
    </h2>
    <a
      href="/en/blog/logout"
      id="toolbar-logout"
      onClick={[Function]}
    >
      <svg
        className="icon logout"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Logout</title>undefined",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
      />
    </a>
  </header>
  <div
    className="avatar default"
  >
    <svg
      className="icon"
      dangerouslySetInnerHTML={
        {
          "__html": undefined,
        }
      }
      onClick={null}
      style={
        {
          "fill": "currentColor",
          "height": "96px",
          "width": "auto",
        }
      }
    />
  </div>
  <div
    className="pastanaga-menu-list"
  >
    <ul>
      <li>
        <a
          href="/personal-information"
          id="Profile"
          onClick={[Function]}
        >
          Profile
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
          />
        </a>
      </li>
      <li>
        <button
          aria-label="Preferences"
          onClick={[Function]}
        >
          Preferences
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
          />
        </button>
      </li>
      <li>
        <a
          href="/controlpanel"
          onClick={[Function]}
        >
          Site Setup
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
          />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Toolbar Personal Tools component > renders an Toolbar Personal Tools component 1`] = `
<div
  className="personal-tools pastanaga-menu"
  style={
    {
      "flex": "0 0 320px",
    }
  }
>
  <header
    className="header"
  >
    <button
      className="back"
      onClick={[Function]}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Back</title>undefined",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
      />
    </button>
    <div
      className="vertical divider"
    />
    <h2>
      admin
    </h2>
    <a
      href="/logout"
      id="toolbar-logout"
      onClick={[Function]}
    >
      <svg
        className="icon logout"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Logout</title>undefined",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
      />
    </a>
  </header>
  <div
    className="avatar default"
  >
    <svg
      className="icon"
      dangerouslySetInnerHTML={
        {
          "__html": undefined,
        }
      }
      onClick={null}
      style={
        {
          "fill": "currentColor",
          "height": "96px",
          "width": "auto",
        }
      }
    />
  </div>
  <div
    className="pastanaga-menu-list"
  >
    <ul>
      <li>
        <a
          href="/personal-information"
          id="Profile"
          onClick={[Function]}
        >
          Profile
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
          />
        </a>
      </li>
      <li>
        <button
          aria-label="Preferences"
          onClick={[Function]}
        >
          Preferences
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
          />
        </button>
      </li>
      <li>
        <a
          href="/controlpanel"
          onClick={[Function]}
        >
          Site Setup
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
          />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Toolbar Personal Tools component > renders an Toolbar Personal Tools component with portrait set 1`] = `
<div
  className="personal-tools pastanaga-menu"
  style={
    {
      "flex": "0 0 320px",
    }
  }
>
  <header
    className="header"
  >
    <button
      className="back"
      onClick={[Function]}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Back</title>undefined",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
      />
    </button>
    <div
      className="vertical divider"
    />
    <h2>
      admin
    </h2>
    <a
      href="/logout"
      id="toolbar-logout"
      onClick={[Function]}
    >
      <svg
        className="icon logout"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Logout</title>undefined",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
      />
    </a>
  </header>
  <div
    className="avatar"
  >
    <img
      alt="user avatar"
      src="http://localhost:8080/Plone/++api++/@portrait/admin"
    />
  </div>
  <div
    className="pastanaga-menu-list"
  >
    <ul>
      <li>
        <a
          href="/personal-information"
          id="Profile"
          onClick={[Function]}
        >
          Profile
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
          />
        </a>
      </li>
      <li>
        <button
          aria-label="Preferences"
          onClick={[Function]}
        >
          Preferences
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
          />
        </button>
      </li>
      <li>
        <a
          href="/controlpanel"
          onClick={[Function]}
        >
          Site Setup
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
          />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Toolbar Personal Tools component > renders an Toolbar Personal Tools component without Site Setup access 1`] = `
<div
  className="personal-tools pastanaga-menu"
  style={
    {
      "flex": "0 0 320px",
    }
  }
>
  <header
    className="header"
  >
    <button
      className="back"
      onClick={[Function]}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Back</title>undefined",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
      />
    </button>
    <div
      className="vertical divider"
    />
    <h2>
      regular_user
    </h2>
    <a
      href="/logout"
      id="toolbar-logout"
      onClick={[Function]}
    >
      <svg
        className="icon logout"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Logout</title>undefined",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
      />
    </a>
  </header>
  <div
    className="avatar default"
  >
    <svg
      className="icon"
      dangerouslySetInnerHTML={
        {
          "__html": undefined,
        }
      }
      onClick={null}
      style={
        {
          "fill": "currentColor",
          "height": "96px",
          "width": "auto",
        }
      }
    />
  </div>
  <div
    className="pastanaga-menu-list"
  >
    <ul>
      <li>
        <a
          href="/personal-information"
          id="Profile"
          onClick={[Function]}
        >
          Profile
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
          />
        </a>
      </li>
      <li>
        <button
          aria-label="Preferences"
          onClick={[Function]}
        >
          Preferences
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
          />
        </button>
      </li>
    </ul>
  </div>
</div>
`;
